5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1712_2508.log
== TEST (2019-05-13 21:09:45) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:10:56) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = (o + (-1**(p + 1)) * 4) / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
-0.02083333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:11:14) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = (o + (-1**(p + 1)) * 4) / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
-0.02083333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:12:02) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = (o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:12:36) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = (o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:12:55) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = (o + (-1**(p + 1)) * 4)/ (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
-0.02083333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:13:16) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = (o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:18:14) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = (o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:19:04) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 21:19:28) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- EXECUTION TIME:
0.287004
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.91666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.97333333
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.96969697
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:19:32) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:19:56) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:22:05) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1) * 4) / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:22:37) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1) * 4) / (2 * (2 + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:24:06) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
		m = m + 1
		p = p + 1
		q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:24:39) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (2 + 1) * (q + 2))
	else:
		a = o
		m = m + 1
		p = p + 1
		q = q + 1
print(round(a, 8))
-- OUTPUT:
2.91666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:26:41) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.96428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:29:06) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (o + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.94285714
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:31:04) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
2.98484848
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:37:23) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (o + 1))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.92857143
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:37:41) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (o + 1))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 1
print(round(a, 8))
-- OUTPUT:
2.92857143
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:39:26) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
2.98484848
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:39:37) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
2.98484848
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:40:14) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 2
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
2.96428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:40:45) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1**(p + 1)) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 2
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
2.96428571
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:48:40) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1)**(p + 1) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:48:53) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + (-1)**(p + 1) * 4 / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:49:29) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:49:47) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 1
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:50:40) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:51:07) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:56:36) 
-- CODE:
n = int(input("repeticao: "))
m = 0
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:59:08) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.02222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:59:25) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.02222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:58) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1 
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.02222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:08:07) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.02222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:08:44) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m <= n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:09:09) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m <= n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.01515152
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:09:56) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (2 * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.02222222
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:12:57) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:13:17) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:14:58) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:15:16) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / ((q - 1) * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00634921
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:15:56) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:16:45) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:18:04) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m <= n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.0030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:20:09) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:22:35) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + (((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2)))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:22:47) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + (((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2)))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:26:13) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = o + (((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2)))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a + o, 8))
-- OUTPUT:
6.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:26:28) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a + o, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:27:31) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
p = 1
q = 2
while (m < n):
	if (n > 1):
		a = ((-1)**(p + 1) * 4) / (q * (q + 1) * (q + 2))
	else:
		a = o
	m = m + 1
	p = p + 2
	q = q + 2
print(round(a + o, 8))
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:04:50) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
i = 1
p = 0
q = 0
while (m < n):
	if (n > 1):
		a = ((-1)**(p + 1)) * (4 / (q + 2) * (q + 3) * (q + 4))
	else:
		p = n
	m = m + 1
	i = i + 1
	q = q + 2
	p = p + a
print(round(p + o, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    print(round(p + o, 8))
TypeError: type complex doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 00:05:18) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
i = 1
p = 0
q = 0
while (m < n):
	if (n > 1):
		a = ((-1)**(i + 1)) * (4 / ((q + 2) * (q + 3) * (q + 4)))
	else:
		p = n
	m = m + 1
	i = i + 1
	q = q + 2
	p = p + a
print(round(p + o, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 00:05:25) 
-- CODE:
n = int(input("repeticao: "))
m = 1
o = 3
i = 1
p = 0
q = 0
while (m < n):
	if (n > 1):
		a = ((-1)**(i + 1)) * (4 / ((q + 2) * (q + 3) * (q + 4)))
	else:
		p = n
	m = m + 1
	i = i + 1
	q = q + 2
	p = p + a
print(round(p + o, 8))
-- EXECUTION TIME:
0.165513
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
